Fixed artists on the comic book detail view

--- a/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
+++ b/src/ComicBookGallery/Views/ComicBooks/Detail.cshtml
@@ -10,7 +10,7 @@
         "Pencils: Humberto Ramos",
         "Inks: Victor Olazaba",
         "Colors: Edgar Delgado",
-        "Letters: Chris Eliopoulos"
+        "Letters: Chris Eliopoulos" 
     };
 }
 
@@ -29,8 +29,18 @@
         <h5>Description:</h5>
         <div>@Html.Raw(description)</div>
 
-        <h5>Artists:</h5>
-        <div>@artists</div>
+        @if (artists.Length > 0)
+        {
+            <h5>Artists:</h5>
+            <div>
+                <ul>
+                    @foreach (var artist in artists)
+                    {
+                        <li>@artist</li>
+                    }
+                </ul>
+             </div>
+        }
     </div>
 </body>
 </html>
